--- a/sass/style.css
+++ b/sass/style.css
@@ -435,8 +435,8 @@ footer {
 }
 
 .box_palabras .box_palabras_alpha ul li a:hover, .box_palabras .box_palabras_alpha ul li a.active {
-  font-weight: 600;
   color: #2e58ff;
+  font-weight: 600;
 }
 
 .box_palabras .box_palabras_selections .col-4 {
@@ -451,16 +451,16 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  justify-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 30%;
   margin: 60px auto;
+  justify-items: center;
 }
 
 .box_palabra_detalle .box_palabra_detalle_titles .sintaxis,
@@ -475,15 +475,126 @@ footer {
 }
 
 .box_palabra_detalle .box_palabra_detalle_titles .sintaxis p {
-  background-color: #d1e7ff;
+  padding: 4px 20px;
   color: #2e58ff;
   font-weight: 600;
-  padding: 4px 20px;
+  background-color: #d1e7ff;
   border-radius: 100px;
 }
 
 .box_palabra_detalle .box_palabra_detalle_titles .title h1 {
   color: #070d59;
   font-weight: 800;
+}
+
+.box_palabra_detalle .box_palabra_detalle_definition {
+  margin-bottom: 60px;
+}
+
+.box_palabra_detalle .box_palabra_detalle_definition .title {
+  position: relative;
+}
+
+.box_palabra_detalle .box_palabra_detalle_definition .title h3 {
+  display: inline-block;
+  color: #070d59;
+  font-weight: 600;
+  padding-bottom: 20px;
+  background-color: #fff;
+  padding-right: 20px;
+}
+
+.box_palabra_detalle .box_palabra_detalle_definition .title h3::after {
+  content: '';
+  display: block;
+  position: absolute;
+  z-index: -1;
+  top: 20px;
+  right: 0;
+  width: 100%;
+  border: 1px dashed #e9e9e9;
+}
+
+.box_palabra_detalle .note ul li {
+  position: relative;
+  list-style-position: inside;
+  margin-left: 20px;
+}
+
+.box_palabra_detalle .note ul li span {
+  position: absolute;
+  top: -2px;
+  left: -20px;
+  color: #070d59;
+  font-size: 1.6rem;
+  font-weight: 600;
+}
+
+.box_palabra_detalle .ejemplo ul li {
+  position: relative;
+  margin-left: 20px;
+}
+
+.box_palabra_detalle .ejemplo ul li::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 8px;
+  left: -20px;
+  width: 8px;
+  height: 8px;
+  border-radius: 100px;
+  background-color: #b9dcff;
+}
+
+.box_palabra_detalle .ejemplo ul li p {
+  font-style: italic;
+  color: #9a9a9a;
+}
+
+.box_palabra_detalle .list-simila ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+}
+
+.box_palabra_detalle .list-simila ul li {
+  text-transform: capitalize;
+}
+
+.box_palabra_detalle .sinonimos ul li {
+  padding: 2px 18px;
+  color: #28C76F;
+  font-weight: 500;
+  background-color: #E5F8ED;
+  border-radius: 100px;
+}
+
+.box_palabra_detalle .antonimos ul li {
+  padding: 2px 18px;
+  color: #EA5455;
+  font-weight: 500;
+  background-color: #FDEAEA;
+  border-radius: 100px;
+}
+
+.box_palabra_detalle .video .lorem_video {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 260px;
+  background-color: #ddd;
+}
+
+.box_palabra_detalle .video .lorem_video .bx {
+  opacity: 0.5;
+  font-size: 6rem;
 }
 /*# sourceMappingURL=style.css.map */
