--- a/sass/style.css
+++ b/sass/style.css
@@ -231,7 +231,7 @@ header .header_photos .header_photos_woman_circles {
   transition: all 0.4s ease-in-out;
 }
 
-header .header_photos .header_photos_woman_circles .circle, header .header_photos .header_photos_woman_circles .circle_1, header .header_photos .header_photos_woman_circles .circle_2, header .header_photos .header_photos_woman_circles .circle_3 {
+header .header_photos .header_photos_woman_circles .circle, header .header_photos .header_photos_woman_circles .circle_1, header .header_photos .header_photos_woman_circles .circle_2, header .header_photos .header_photos_woman_circles .circle_3, header .header_photos .header_photos_woman_circles .box_equipo .box_equipo_companer .box_equipo_companer_img .circle_1, .box_equipo .box_equipo_companer .box_equipo_companer_img header .header_photos .header_photos_woman_circles .circle_1, header .header_photos .header_photos_woman_circles .box_equipo .box_equipo_companer .box_equipo_companer_img .circle_2, .box_equipo .box_equipo_companer .box_equipo_companer_img header .header_photos .header_photos_woman_circles .circle_2 {
   position: absolute;
   border-radius: 100%;
 }
@@ -548,8 +548,8 @@ footer {
 }
 
 .box_palabra_detalle .ejemplo ul li p {
-  font-style: italic;
   color: #9a9a9a;
+  font-style: italic;
 }
 
 .box_palabra_detalle .list-simila ul {
@@ -596,5 +596,72 @@ footer {
 .box_palabra_detalle .video .lorem_video .bx {
   opacity: 0.5;
   font-size: 6rem;
+}
+
+.box_equipo {
+  margin: 120px 0;
+}
+
+.box_equipo .box_equipo_companer {
+  margin-bottom: 120px;
+}
+
+.box_equipo .box_equipo_companer .box_equipo_companer_img {
+  position: relative;
+}
+
+.box_equipo .box_equipo_companer .box_equipo_companer_img .img_perfil {
+  overflow: hidden;
+  width: 300px;
+  border-radius: 100%;
+}
+
+.box_equipo .box_equipo_companer .box_equipo_companer_img .img_perfil img {
+  position: relative;
+  left: -20%;
+}
+
+.box_equipo .box_equipo_companer .box_equipo_companer_img .circle, .box_equipo .box_equipo_companer .box_equipo_companer_img header .header_photos .header_photos_woman_circles .circle_3, header .header_photos .header_photos_woman_circles .box_equipo .box_equipo_companer .box_equipo_companer_img .circle_3, .box_equipo .box_equipo_companer .box_equipo_companer_img .circle_1, .box_equipo .box_equipo_companer .box_equipo_companer_img .circle_2 {
+  background-color: #eff5ff;
+  height: 220px;
+  width: 220px;
+  display: block;
+  position: absolute;
+  z-index: -1;
+  border-radius: 100%;
+}
+
+.box_equipo .box_equipo_companer .box_equipo_companer_img .circle_1 {
+  top: -60px;
+  right: -150px;
+}
+
+.box_equipo .box_equipo_companer .box_equipo_companer_img .circle_2 {
+  top: -60px;
+  right: 150px;
+}
+
+.box_equipo .box_equipo_companer .box_equipo_companer_info h4 {
+  color: #070d59;
+  font-weight: 700;
+}
+
+.box_equipo .box_equipo_companer .box_equipo_companer_info h5 {
+  color: #a5a5a5;
+  font-weight: 400;
+}
+
+.box_equipo .box_equipo_companer .box_equipo_companer_info p {
+  line-height: 2.2rem;
+}
+
+.box_equipo .box_equipo_companer .box_equipo_companer_info .redes .bx {
+  margin-right: 16px;
+  color: #2e58ff;
+  font-size: 2rem;
+}
+
+.box_equipo .box_equipo_companer .box_equipo_companer_info .redes .bx:hover {
+  color: #070d59;
 }
 /*# sourceMappingURL=style.css.map */
