prueba device scale part 4

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,7 +10,10 @@ $background: #eff5ff;
 
 body {
   font-family: 'Barlow', serif !important;
-  font-size: 1rem;
+}
+
+p {
+  font-size: 1rem !important;
 }
 
 .active {
